
# History

## 0.2.8

  * Fixed building on Ubuntu 13.04.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/98>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/92>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/66>
  * Added spinner overide support. Thanks to Paul Scott.
  * Updated (`-c`) option to optionally clean `.deb` packages and sources.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/95>
  * Updated documentation and migrated to Markdown.
  * Removed `imvirt` requirement.
  * Tested on Ubuntu 10.04, Ubuntu 12.04, Ubuntu 13.04, Debian 6 and Debian 7.

## 0.2.7

  * Many fixes and improvements. Thanks for all the contributions!
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/72>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/74>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/75>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/77>

## 0.2.6

  * Fixed screen scraping of the Oracle website.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/55>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/56>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/57>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/58>

## 0.2.5

  * Fixed building Oracle Java 7 by adding `libxrender1` to the dependencies.

## 0.2.4

  * Added support for JCE Unlimited Strength Jurisdiction Policy Files. Thanks to Ladios Jonquil and Jameson J Lee.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/31>
  * Reverted to https for git clone of upstream tools.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/32>
  * Updated download links to Sun Java 6 and Oracle Java 7. Thanks to Ladios Jonquil and Jameson J Lee.
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/33>
    * Closes: <https://github.com/flexiondotorg/oab-java6/issues/34>