@@ -13,6 +13,7 @@ Other contributors, listed alphabetically, are:
   * Hannes Schmidt
   * Ihor Kaharlichenko
   * Jameson J Lee
+  * Jonathan Harker
   * Ladios Jonquil
   * Martin Polden
   * Miah Johnson
